--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@namespace Mission7.Views
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Mission7
-@using Mission7
 @using Mission7.Models
 @using Mission7.Models.ViewModels
+@using Mission7.Infrastructure
