--- a/Pages/Admin/Books.razor
+++ b/Pages/Admin/Books.razor
@@ -22,7 +22,7 @@
             <td>@b.Publisher</td>
 
             <td>
-                <NavLink class="btn btn-info btn-sm" href="@GetDetailsUrl(b.BookId)">Details</NavLink>
+                <NavLink class="btn btn-success btn-sm" href="@GetDetailsUrl(b.BookId)">Details</NavLink>
             </td>
 
             <td>
