--- a/Pages/Admin/Details.razor
+++ b/Pages/Admin/Details.razor
@@ -2,7 +2,7 @@
 
 <h3 class="bg-info text-white text-center p-1">Details</h3>
 
-<table class="table table-sm table-bordered table-striped">
+<table class="table table-dark">
     <tbody>
         <tr><th>Book ID:</th><td>@b.BookId</td></tr>
         <tr><th>Name:</th><td>@b.Title</td></tr>
