--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -11,26 +11,41 @@
     </head>
 
     <body>
-        <div class="bg-dark text-white p-2">
-            <span class="navbar-brand m-1-2">WATER PROJECT</span>
-        </div>
+        <section class="vh-100" style="background-color: #508bfc;">
+            <div class="bg-dark text-white p-2">
+                <span class="navbar-brand m-1-2">Mission 11</span>
+            </div>
 
-        <div class="m-1 p-1">
-            <div class="text-danger" asp-validation-summary="All"></div>
-            <form method="post" asp-controller="Account" asp-action="Login">
-                <div class="form-group">
-                    <label asp-for="Username">User Name: </label>
-                    <input asp-for="Username" class="form-control"/>
-                </div>
+            <div class="m-1 p-1">
+                <div class="text-danger" asp-validation-summary="All"></div>
 
-                <div class="form-group">
-                    <label asp-for="Password">Password: </label>
-                    <input asp-for="Password" class="form-control" type="password"/>
-                </div>
+                <form method="post" asp-controller="Account" asp-action="Login">
+                    <div class="form-group">
+                        <label asp-for="Username">User Name: </label>
+                        <input asp-for="Username" class="form-control" />
+                    </div>
 
-                <button class="btn btn-primary" type="submit">Log In</button>
-                <input type="hidden" asp-for="ReturnUrl"/>
-            </form>
-        </div>
+                    <div class="form-group">
+                        <label asp-for="Password">Password: </label>
+                        <input asp-for="Password" class="form-control" type="password" />
+                    </div>
+
+                    <div class="d-flex justify-content-between align-items-center">
+                        <!-- Checkbox -->
+                        <div class="form-check mb-0">
+                            <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
+                            <label class="form-check-label" for="form2Example3">
+                                Remember me
+                            </label>
+                        </div>
+                        <a href="#!" class="text-body">Forgot password?</a>
+                    </div>
+
+                    <button class="btn btn-primary" type="submit">Log In</button>
+                    <input type="hidden" asp-for="ReturnUrl" />
+                </form>
+
+            </div>
+        </section>
     </body>
 </html>
